# ruff-extra-rules

./: .coveragerc  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: adding-a-check.md  behavioral_contract.md
docs/adr/: 0001-iterative-refactor-not-rewrite.md  0002-redundant-assignment-scope-tracker-not-unified.md  0005-cache-key-source-hash-and-config-fingerprint.md  0006-typed-fix-data-per-check.md  0007-redundant-assignment-test-file-heuristic-deliberate.md  0008-ruff-check-cli-parity.md  0009-lint-tests-directory.md  0011-behavioral-contract-audit-fix-engine.md  0012-behavioral-contract-audit-internal-errors-exit-codes.md  0013-behavioral-contract-audit-resource-timeouts-performance.md  0014-behavioral-contract-audit-caching-and-version-invalidation.md  0015-behavioral-contract-audit-file-discovery-path-handling.md  0017-behavioral-contract-audit-diagnostics-fix-modes-user-trust.md  0018-ast-checks-init-thin-boundary.md  0019-behavioral-contract-audit-configuration-and-discovery.md  0020-behavioral-contract-audit-cross-platform-behavior.md  0021-behavioral-contract-audit-rule-isolation-python-compat.md  0022-behavioral-contract-audit-stdio-tty-logging-runtime.md  0023-behavioral-contract-audit-semantic-formatting-preservation.md  0024-behavioral-contract-audit-git-vcs-integration-and-security.md  0026-behavioral-contract-audit-testing-requirements.md  0027-behavioral-contract-audit-synthesis.md  0028-directory-scan-untracked-files-and-gitignored-visibility.md  0029-directory-scan-warning-skips-known-non-source-directories.md  0030-file-local-semantic-variable-rename-suggestions.md  0031-forbid-vars-conservative-reporting-default.md  0032-redundant-assignment-autofix-safety-criteria.md  0033-validate-function-name-safe-autofix-criteria.md
docs/audits/: 0001-behavioral-contract-audit-semantic-formatting-preservation.md  0015-behavioral-contract-audit-testing-requirements.md  0016-behavioral-contract-audit-synthesis-general-failure-principle.md
docs/rules/: excessive-blank-lines.md  forbid-vars.md  misplaced-comment.md  redundant-super-init.md  validate-function-name.md
docs/work-items/: 01-atomic-fix-writes.md  02-inline-ignore-parity-tri002-tri003.md  03-consolidate-ignore-pattern-regex.md  04-typed-fix-data-and-fixed-marker.md  05-self-describing-check-cli-args.md  06-cwd-independent-autofix-config-lookup.md  07-structural-cache-invalidation.md  08-document-is-test-file-heuristic.md  09-cache-key-missing-check-config.md  10-lint-tests-directory.md  11-ruff-check-cli-parity.md
docs/work-items/archived/: 02-inline-ignore-parity-tri002-tri003.md  07-structural-cache-invalidation.md  10-lint-tests-directory.md
scripts/: benchmark.py
src/pre_commit_hooks/: _cache.py  _prefilter.py
src/pre_commit_hooks/ast_checks/: __init__.py  __main__.py  _base.py  _cli.py  _diagnostics.py  _discovery.py  _forbid_vars_suggestions.py  _orchestrator.py  _scope.py  excessive_blank_lines.py  forbid_vars.py  misplaced_comment.py  redundant_super_init.py
src/pre_commit_hooks/ast_checks/redundant_assignment/: __init__.py  analysis.py  autofix.py  semantic.py
src/pre_commit_hooks/ast_checks/validate_function_name/: __init__.py  analysis.py  autofix.py  suggestion.py
tests/: factories.py  test_base.py  test_cache.py  test_excessive_blank_lines.py  test_forbid_vars.py  test_forbid_vars_suggestions.py  test_main.py  test_misplaced_comment.py  test_orchestrator.py  test_prefilter.py  test_redundant_assignment.py  test_redundant_super_init.py  test_scope.py  test_validate_function_name.py  test_validate_function_name_autofix.py  test_validate_function_name_suggestion.py
tests/fixtures/excessive_blank_lines/bad/: double_blank_after_comment.py  triple_blank_after_docstring.py
tests/fixtures/excessive_blank_lines/ignore/: double_blank_after_comment.py  triple_blank_after_docstring.py
tests/fixtures/misplaced_comments/good/: inline_comment.py  trailing_on_brace.py  trailing_on_bracket.py  trailing_on_paren.py
tests/fixtures/redundant_super_init/ignore/: redundant_kwargs_forwarding.py
tests/fixtures/validate_function_name/ignore/: inline_ignore.py
tests/redundant_assignment/: _helpers.py  test_analysis.py  test_autofix.py  test_check.py  test_semantic.py
tests/validate_function_name/: test_analysis.py  test_autofix.py  test_check.py
