[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ruff-extra-rules"
version = "1.0.0"
description = "Extra Python rule checks and fixups for pre-commit/prek, meant to run alongside ruff"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
  { name = "Alessio", email = "software.development@secure.mailbox.org" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
]

# Entry points define the CLI commands
# These map to the 'entry' field in .pre-commit-hooks.yaml
# Note: ast-checks uses python -m entry point instead of a script entry
[project.scripts]

[dependency-groups]
dev = [
  "pytest>=9.0.1",
  "ruff>=0.14.7",
  "mypy>=1.19.0",
  "types-toml>=0.10.8.20240310",
  "types-requests>=2.32.4.20250913",
  "coverage>=7.12.0",
  "covdefaults>=2.3.0",
  "strict-no-cover>=0.1.1",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pre_commit_hooks*"]

# Ruff configuration (linting and formatting)
[tool.ruff]
target-version = "py314"
exclude = ["tests/fixtures/**"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Coverage configuration lives in .coveragerc, not here: coverage.py reads
# only the first config file it finds (.coveragerc, setup.cfg, tox.ini,
# pyproject.toml, in that order), so a [tool.coverage.*] section here would
# never be read while .coveragerc exists.
