[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ruff-extra-rules"
version = "0.0.31"
description = "Extra Python rule checks and fixups for pre-commit/prek, meant to run alongside ruff"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
  { name = "Alessio", email = "software.development@secure.mailbox.org" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
]

# Entry points define the CLI commands
# These map to the 'entry' field in .pre-commit-hooks.yaml
# Note: ruff-extra-rules uses python -m entry point instead of a script entry
[project.scripts]

[dependency-groups]
dev = [
  "pytest>=9.1.1",
  "mypy>=2.3.0",
  "types-toml>=0.10.8.20240310",
  "types-requests>=2.32.4.20250913",
  "coverage>=7.12.0",
  "covdefaults>=2.3.0",
  "types-pygments>=2.20.0.20260518",
  "types-pexpect>=4.9.0.20260518",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pre_commit_hooks*"]

# Ruff configuration (linting and formatting)
[tool.ruff]
target-version = "py314"
exclude = ["tests/fixtures/**"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.vulture]
exclude = ["tests/fixtures"]
paths = ["src", "tests"]
# visit_* are ast.NodeVisitor callbacks invoked via .visit() dispatch, not by
# name; return_value/side_effect are unittest.mock attributes read by the
# mock machinery. assign_line is a TypedDict field (RedundantAssignmentFixData
# in redundant_assignment/autofix.py) read only via dict subscript
# (fix_data["assign_line"]), never as an attribute — vulture's static
# analysis can't see any of these three kinds of use.
ignore_names = ["visit_*", "return_value", "side_effect", "assign_line"]

# Coverage configuration lives in .coveragerc, not here: coverage.py reads
# only the first config file it finds (.coveragerc, setup.cfg, tox.ini,
# pyproject.toml, in that order), so a [tool.coverage.*] section here would
# never be read while .coveragerc exists.
