[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ruff-extra-rules"
version = "0.0.31"
description = "Extra Python rule checks and fixups for pre-commit/prek, meant to run alongside ruff"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
  { name = "Alessio", email = "software.development@secure.mailbox.org" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
]

# Entry points define the CLI commands
# These map to the 'entry' field in .pre-commit-hooks.yaml
# Note: ruff-extra-rules uses python -m entry point instead of a script entry
[project.scripts]

[dependency-groups]
dev = [
  "pytest>=9.1.1",
  "mypy>=2.3.0",
  "types-toml>=0.10.8.20240310",
  "types-requests>=2.32.4.20250913",
  "coverage>=7.12.0",
  "covdefaults>=2.3.0",
  "types-pygments>=2.20.0.20260518",
  "types-pexpect>=4.9.0.20260518",
  "polyfactory>=3.3.0",
  "slotscheck>=0.20.1",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pre_commit_hooks*"]

# Ruff configuration (linting and formatting)
[tool.ruff]
target-version = "py314"
exclude = ["tests/fixtures/**"]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",
  # Trailing comma missing
  "COM812",
  # Use of `assert` detected
  "S101",
  # Magic value used in comparison
  "PLR2004",
  # Too many branches
  "PLR0912",
  # Too many return statements
  "PLR0911",
  # is too complex
  "C901",
  # Too many statements
  "PLR0915",
  # too-many-arguments
  "PLR0913",
  # raw-string-in-exception
  "EM101",
  # Avoid specifying long messages outside the exception class
  "TRY003",
  # print
  "T201",
  # Missing copyright notice at top of file
  "CPY001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  # private-member-access
  "SLF001",
  # boolean-type-hint-positional-argument
  "FBT001",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.slotscheck]
strict-imports = true
require-superclass = true
require-subclass = true

[tool.vulture]
exclude = ["tests/fixtures"]
paths = ["src", "tests"]
# visit_* are ast.NodeVisitor callbacks invoked via .visit() dispatch, not by
# name; return_value/side_effect are unittest.mock attributes read by the
# mock machinery. assign_line, fstring_field_start_col/fstring_field_end_col,
# and the is_property..returns_class fields are TypedDict fields
# (RedundantAssignmentFixData in redundant_assignment/autofix.py,
# FunctionBehavior in validate_function_name/analysis.py) read only via dict
# subscript (e.g. fix_data["assign_line"], analysis["is_property"]), never as
# an attribute. _restore_sigterm_handler is an autouse pytest fixture, invoked
# implicitly for every test in its module rather than referenced by name the
# way an ordinary fixture is (as a test function's own parameter, which
# vulture's analysis does see) -- vulture's static analysis can't see any of
# these four kinds of use. (A vulture `ignore_decorators` entry can't target
# autouse specifically: vulture's decorator matching strips call arguments,
# so "@pytest.fixture" and "@pytest.fixture(autouse=True)" are
# indistinguishable to it.)
ignore_names = [
  "visit_*",
  "return_value",
  "side_effect",
  "assign_line",
  "fstring_field_start_col",
  "fstring_field_end_col",
  "is_property",
  "disk_read",
  "disk_write",
  "network_read",
  "network_write",
  "outputs",
  "returns_bool",
  "aggregates",
  "creates_object",
  "mutates_args",
  "yields",
  "parses",
  "renders",
  "searches",
  "validates",
  "transforms",
  "delegates_get",
  "collects",
  "returns_class",
  "auto_fixable",
  "_restore_sigterm_handler",
]

# Coverage configuration lives in .coveragerc, not here: coverage.py reads
# only the first config file it finds (.coveragerc, setup.cfg, tox.ini,
# pyproject.toml, in that order), so a [tool.coverage.*] section here would
# never be read while .coveragerc exists.
